@@ -1,3 +1,9 @@
+2000-07-26  C. Brian Jones  <cbj@gnu.org>
+ 
+	* src/option.cpp (Option): Create a
+	copy of the -classpath string so it
+	can be deleted correctly later.
+
 2000-07-26  Mo DeJong  <mdejong@redhat.com>
 
 	* src/unparse.cpp: Uncomment #includes,
